add queryHistory support for bailian rag.